fixed font and space sizing on smaller screen

--- a/src/style.scss
+++ b/src/style.scss
@@ -37,7 +37,7 @@ body {
 // Navbar
 .navbar {    
     background-color: $white !important;
-    padding: 0 142px;
+    padding: 0 8.875rem;
     
     .navbar-brand {
         font-size: 2.1875rem;
@@ -52,7 +52,7 @@ body {
             margin-left: 2.5em;
             letter-spacing: 0;
             font-size: 1.25rem;
-            padding: 50px 0;
+            padding: 3.125rem 0;
 
             &:nth-child(1) {
                 margin-left: 0;
@@ -70,39 +70,39 @@ body {
 
 // Header Banner
 #header-banner {
-    padding-left: 142px;
-    padding-right: 142px;
+    padding-left: 8.875rem;
+    padding-right: 8.875rem;
     background: transparent linear-gradient(270deg, $pink-bg 0%, $blue-bg 100%) 0% 0% no-repeat padding-box;
     border-radius: 50px 50px 0px 0px;
 
     .row {
-        padding-top: 80px;
-        padding-bottom: 280px;
+        padding-top: 5rem;
+        padding-bottom: 17.5rem;
 
         #header-banner__left {
-            margin-top: 100px;
+            margin-top: 6.25rem;
             h1 {
-                font-size: 4.6875rem;
+                font-size: 4.125rem;
                 letter-spacing: 0px;
                 color: $black;
 
                 strong {
-                    font-size: 5.625rem;
+                    font-size: 4.25rem;
                 }
             }
 
             p {
                 font-size: 1.25rem;
                 color: $black;
-                margin: 50px auto 80px;
-                line-height: 50px;
+                margin: 3.125rem auto 5rem;
+                line-height: 2.25rem;
             }
 
             button {
-                padding: 24px 76px;
+                padding: 1.5rem 4rem;
                 border: 0px;
                 border-radius: 50px;
-                font-size: 1.5rem;
+                font-size: 1.25rem;
                 text-transform: uppercase;
                 background-color: $white;
                 color: $red;
@@ -125,8 +125,8 @@ body {
 
                     li {
                         text-indent: 0;
-                        width: 30px;
-                        height: 30px;
+                        width: 1.875rem;
+                        height: 1.875rem;
                         border: 4px solid $white;
                         border-radius: 100%;
                         line-height: 30px;
@@ -146,12 +146,12 @@ body {
                         }                        
 
                         &.active {
-                            width: 40px;
-                            height: 40px;   
+                            width: 2.5rem;
+                            height: 2.5rem;   
                         }
 
                         .caption {
-                            margin-top: 60px;
+                            margin-top: 3.75rem;
                             margin-left: -40px;
                             width: 300%;
                             height: auto;
@@ -238,4 +238,10 @@ body {
 
 .font-extrabold {
     font-weight: 800;
+}
+
+@media (max-width: 1440px) {
+    html, body {
+        font-size: 75% !important;
+    }
 }
